Visa tidsåtgång för scenarion i rapporten

--- a/cucumber-html-report/index.html
+++ b/cucumber-html-report/index.html
@@ -47,7 +47,7 @@
         <a role="button" data-toggle="collapse" data-parent="#accordion" 
         data-target="#feature{{@../index}}_scenario{{@index}}" 
             class="collapsed">
-          {{name}}
+          {{name}} ({{durationFormat}})
         </a></h3>
 
       </div>
